[Squash] style/minor fixes in firm_list.scss

--- a/app/assets/stylesheets/components/firm_list/_firm_list.scss
+++ b/app/assets/stylesheets/components/firm_list/_firm_list.scss
@@ -25,8 +25,8 @@
 }
 
 .firm-list__filter {
-  font-size:  $baseline-unit*2;
-  font-color: $color-firm-list-border-grey;
+  font-size: $baseline-unit*2;
+  color: $color-firm-list-border-grey;
   margin-top: 44px;
   margin-left: 0.5em;
   padding: 0.5em;
@@ -36,4 +36,6 @@
   border: 2px solid  $color-firm-list-border-grey;
 }
 
-#firm-list h2 {float: left;}
+#firm-list h2 {
+  float: left;
+}
